Yangi dizaynga o'tkazilgan dekstop uchun tuzatildi Sales tablosu yangilandi
