# src/main/java/com/SmartMarket/Entity/SalesObject.java
@@ -1,34 +1,0 @@
-package com.SmartMarket.Entity;
-
-import java.time.LocalDateTime;
-
-public class SalesObject {
-
-    private int storeId;
-    private LocalDateTime saleDate;
-    private int totalPrice;
-
-    public int getStoreId() {
-        return storeId;
-    }
-
-    public void setStoreId(int storeId) {
-        this.storeId = storeId;
-    }
-
-    public LocalDateTime getSaleDate() {
-        return saleDate;
-    }
-
-    public void setSaleDate(LocalDateTime saleDate) {
-        this.saleDate = saleDate;
-    }
-
-    public int getTotalPrice() {
-        return totalPrice;
-    }
-
-    public void setTotalPrice(int totalPrice) {
-        this.totalPrice = totalPrice;
-    }
-}
